# livecompile

./: .gitignore  CMakeLists.txt
src/: game.cpp  game_api.h  main.cpp
